# lrclib

./: Cargo.toml  Dockerfile
lrclib-queue-stub/: Cargo.toml
lrclib-queue-stub/src/: lib.rs
server/: Cargo.toml
server/src/: db.rs  entities.rs  errors.rs  lib.rs  queue_stub.rs  repositories.rs  routes.rs  utils.rs
server/src/entities/: lyrics.rs  missing_track.rs  track.rs
server/src/repositories/: lyrics_repository.rs  missing_track_repository.rs  track_repository.rs
server/src/routes/: flag_lyrics.rs  get_lyrics_by_metadata.rs  get_lyrics_by_track_id.rs  publish_lyrics.rs  request_challenge.rs  search_lyrics.rs
server/src/routes/manage/: set_config.rs
src/: main.rs
